# eurotort

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  create_fixtures.sh  default.env  docker.env  dump_and_restore.sh  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.sh  ruff.toml  start-server.sh  xissue_59__remove_html.ipynb  xissue_62__decode_entities.ipynb  xissue_85__populate_linked_to_cases.ipynb
.github/workflows/: build.yml  lint.yml  test.yml
acdh_django_widgets/: apps.py  widgets.py
appcreator/: code_templates.py  import_utils.py
archiv/: admin.py  dal_urls.py  dal_views.py  filters.py  forms.py  models.py  search_result_views.py  tables.py  tests.py  urls.py  utils.py  views.py
archiv/fixtures/: dump.json
archiv/migrations/: 0001_initial.py  0002_yearbook_alter_person_cv.py  0003_courtdecission_year_book_issue_and_more.py  0006_create_trigger.py  (+20 more)
data/: tb_ENAUT.csv  tb_ENST.csv  tb_autor.csv  tb_gericht.csv  tb_staat.csv  tb_stichworte.csv  tb_teilrechtsordnung.csv
djangobaseproject/: settings.py  urls.py
infos/: admin.py  filters.py  forms.py  models.py  special_views.py  tables.py  tests.py  urls.py  views.py
notebooks/: xissue_105__kw2tags.ipynb  xissue_107__new_keywords.ipynb  xissue_108__rename_keywords.ipynb  xissue_59__remove_html.ipynb  xissue_60__remove_parents.ipynb  xissue_69__remove_comments.ipynb  xissue_85__populate_linked_to_cases.ipynb
reports/: keyword-stats.html
templates/: base.html
webpage/: forms.py  metadata.py  tests.py  urls.py  views.py  webpage_content_processors.py
(+55 files in other folders)
