[project]
name = "eurotort"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "acdh-django-browsing>=3.2",
    "acdh-django-widgets>=0.1.0",
    "django>=5.2.7",
    "django-autocomplete-light>=3.12.1",
    "django-next-prev>=1.1.0",
    "django-spaghetti-and-meatballs>=0.4.2",
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "django-fixture-magic>=0.1.5",
]
